# ALKYL

./: .gitignore  .mcp.json  LICENSE  README.md  alkyl.sh  install.sh  pyproject.toml  setup-perplexity.sh  uninstall.sh
.claude-plugin/: plugin.json
config/: CLAUDE.md
docs/plans/: 2026-03-01-scripts-design.md  2026-03-01-scripts-implementation.md
scripts/: chem_3d.py  chem_admet.py  chem_cluster.py  chem_convert.py  chem_diversity.py  chem_highlight.py  chem_lead.py  chem_pka.py  chem_props.py  chem_qm.py  chem_rgroup.py
skills/: rdkit.md
skills/active-learning/: SKILL.md
skills/ase/: SKILL.md
skills/binding-kinetics/: SKILL.md
skills/chem-brainstorm/: SKILL.md
skills/coarse-grained/: SKILL.md
skills/docking/: SKILL.md
skills/fbdd/: SKILL.md
skills/force-fields/: SKILL.md
skills/free-energy/: SKILL.md
skills/generative-design/: SKILL.md
skills/homology-modeling/: SKILL.md
skills/lit-rescue/: SKILL.md
skills/mdanalysis/: SKILL.md
skills/mmpa/: SKILL.md
skills/nextflow/: SKILL.md
skills/openbabel/: SKILL.md
skills/organic-mechanisms/: SKILL.md
skills/pepflex/: SKILL.md
skills/pharmacophore/: SKILL.md
skills/py3Dmol/: SKILL.md
skills/qm-dft/: SKILL.md
skills/rdkit/: SKILL.md
skills/synkit/: SKILL.md
skills/torchdrug/: SKILL.md
skills/uncertainty-qsar/: SKILL.md
tests/: conftest.py  test_chem_3d.py  test_chem_admet.py  test_chem_cluster.py  test_chem_convert.py  test_chem_diversity.py  test_chem_highlight.py  test_chem_lead.py  test_chem_pka.py  test_chem_props.py  test_chem_qm.py  test_chem_rgroup.py
(+121 files in other folders)
