[project]
name = "alkyl"
version = "1.0.0"
description = "Computational chemistry plugin for Claude Code"
requires-python = ">=3.9"
dependencies = [
    "rdkit>=2023.9.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "network: marks tests that require network access (deselect with '-m not network')",
]
